--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^0.7.0+2
+
+  flutter_launcher_icons: any
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "Assets/step.png"
  
 
 # For information on the generic Dart part of this file, see the
